<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/termDetailsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.TermDetails">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termDetailsTitleLabel"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/termDetailsTitleField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Title"
                android:inputType="textPersonName"
                android:textSize="24sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termDetailsStartLabel"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/termDetailsStartField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="24sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/termDetailsEndLabel"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/termDetailsEndField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="textPersonName"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>


    <Button
        android:id="@+id/termDetailsCancelBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cancelActivity"
        android:text="@string/termDetailsCancelBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/termDetailsSaveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveTerm"
        android:text="@string/termDetailsSaveBtn"
        app:layout_constraintBottom_toTopOf="@+id/termDetailsCancelBtn"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>