<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Home">

    <ImageView
        android:id="@+id/homeImg"
        android:layout_width="198dp"
        android:layout_height="169dp"
        app:srcCompat="@drawable/ic_baseline_calendar_today_24"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="281dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/homeImgDesc"/>

    <TextView
        android:id="@+id/homeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/homeTxt"
        app:layout_constraintBottom_toTopOf="@+id/homeImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:textSize="34sp" />

    <Button
        android:id="@+id/seeTermsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_btn"
        android:onClick="goToTermsListActivity"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="561dp"
        app:layout_constraintTop_toBottomOf="@+id/homeImg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>